# kontexto

./: .contexto.db  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
src/codecompass/: __init__.py  __main__.py  cli.py  graph.py  output.py  search.py  store.py
src/codecompass/parsers/: __init__.py  go_parser.py  java_parser.py  javascript_parser.py  python_parser.py  registry.py  rust_parser.py
src/contexto/: __init__.py  __main__.py  cli.py  graph.py  mcp_server.py  output.py  parser.py  search.py  store.py
src/contexto/parsers/: __init__.py  go_parser.py  java_parser.py  javascript_parser.py  python_parser.py  registry.py  rust_parser.py
test-project/: .contexto.db
test-project/config/: settings.py
test-project/src/: __init__.py
test-project/src/api/: auth.py  orders.py  products.py  users.py
test-project/src/middleware/: auth.py  logging.py
test-project/src/models/: order.py  product.py  user.py
test-project/src/services/: auth_service.py  order_service.py  product_service.py  user_service.py
test-project/src/utils/: database.py  security.py  validators.py
test-project/tests/integration/: test_order_flow.py
test-project/tests/unit/: test_products.py  test_users.py
tests/: __init__.py  conftest.py  test_cli.py  test_graph.py  test_output.py  test_parser.py  test_search.py  test_store.py
tests/parsers/: test_go_parser.py  test_java_parser.py  test_javascript_parser.py  test_python_parser.py  test_rust_parser.py
